--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Working....</h1>
+        <h1>Hello nickey, your site is on live</h1>
+        <h2>Welcome to your website</h2>
     </body>
 </html>
